# nuts-experiments

./: README.md  pyproject.toml
nuts_experiments/: __init__.py  scrapli_show_vrf.py
playground/: nr-config.yaml
playground/inventory/: hosts.yaml
playground/tests/: test_user.yaml  test_vrf.yaml
tests/: test_nuts_experiments.py
