[tool.poetry]
name = "nuts-experiments"
version = "0.1.0"
description = ""
authors = ["ubaumann <github@m.ubaumann.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
nuts = "^3.0.1"
nornir-scrapli = "^2021.1.30"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
